<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/img"
    tools:context=".RegisterActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/timg"
        tools:ignore="MissingConstraints">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="3dp">
            <ImageView
                android:id="@+id/precRegister"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/left"
                android:padding="10dp"
                android:layout_gravity="center"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_alignParentBottom="true">

            <androidx.appcompat.widget.AppCompatSpinner
                android:textSize="16dp"
                android:id="@+id/spinnertypePersoRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/personnes_arrays"
                android:prompt="@string/type_perso"
                android:drawableRight="@android:drawable/ic_input_get"
                android:textColorHint="#0000"
                android:layout_marginLeft="22dp"
                android:inputType="text"
                android:maxLength="12"
                android:textColor="@color/colorPrimary"
                android:background="#0000"
                android:padding="16dp"
                android:layout_marginRight="35dp"/>
            <View
                android:layout_width="match_parent"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:layout_height="1dp"
                android:layout_marginBottom="1dp"
                android:background="#F9F9F9"/>

            <androidx.appcompat.widget.AppCompatEditText
                android:textSize="16dp"
                android:id="@+id/fullnameRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Fullname"
                android:textColorHint="#ADCCE2"
                android:textColor="#ADCCE2"
                android:drawableRight="@drawable/user"
                android:layout_marginLeft="22dp"
                android:inputType="text"
                android:background="#0000"
                android:padding="16dp"
                android:layout_marginRight="35dp"/>
            <View
                android:layout_width="match_parent"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:layout_height="1dp"
                android:background="#ADCCE2" />
            <androidx.appcompat.widget.AppCompatEditText
                android:textSize="16dp"
                android:id="@+id/mailRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Email"
                android:textColorHint="#ADCCE2"
                android:drawableRight="@android:drawable/ic_dialog_email"
                android:textColor="#ADCCE2"
                android:layout_marginLeft="22dp"
                android:inputType="text"
                android:background="#0000"
                android:padding="16dp"
                android:layout_marginRight="35dp"/>
            <View
                android:layout_width="match_parent"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:layout_height="1dp"
                android:background="#ADCCE2" />
            <androidx.appcompat.widget.AppCompatEditText
                android:textSize="16dp"
                android:id="@+id/usernameRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Username"
                android:textColorHint="#ADCCE2"
                android:drawableRight="@drawable/user"
                android:textColor="#ADCCE2"
                android:layout_marginLeft="22dp"
                android:inputType="text"
                android:background="#0000"
                android:padding="16dp"
                android:layout_marginRight="35dp"/>
            <View
                android:layout_width="match_parent"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:layout_height="1dp"
                android:background="#ADCCE2" />
            <androidx.appcompat.widget.AppCompatEditText
                android:textSize="16dp"
                android:id="@+id/passwordRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Password"
                android:drawableRight="@drawable/pasword"
                android:textColorHint="#ADCCE2"
                android:layout_marginLeft="22dp"
                android:inputType="textPassword"
                android:maxLength="12"
                android:textColor="#ADCCE2"
                android:background="#0000"
                android:padding="16dp"
                android:layout_marginRight="35dp"/>
            <View
                android:layout_width="match_parent"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:layout_height="1dp"
                android:layout_marginBottom="10dp"
                android:background="#ADCCE2"/>
            <androidx.appcompat.widget.AppCompatEditText
                android:textSize="16dp"
                android:id="@+id/ageRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Age..."
                android:drawableRight="@android:drawable/ic_menu_week"
                android:textColorHint="#ADCCE2"
                android:layout_marginLeft="22dp"
                android:inputType="number"
                android:maxLength="12"
                android:textColor="#ADCCE2"
                android:background="#0000"
                android:padding="16dp"
                android:layout_marginRight="35dp"/>
            <View
                android:layout_width="match_parent"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:layout_height="1dp"
                android:layout_marginBottom="10dp"
                android:background="#ADCCE2"/>
            <androidx.appcompat.widget.AppCompatSpinner
                android:textSize="16dp"
                android:id="@+id/niveauRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/level"
                android:prompt="@string/niveau"
                android:drawableRight="@android:drawable/ic_input_get"
                android:textColorHint="#0000"
                android:layout_marginLeft="22dp"
                android:inputType="text"
                android:maxLength="12"
                android:textColor="@color/colorPrimary"
                android:background="#0000"
                android:padding="16dp"
                android:layout_marginRight="35dp"/>
            <View
                android:layout_width="match_parent"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:layout_height="1dp"
                android:layout_marginBottom="1dp"
                android:background="#F9F9F9"/>
            <androidx.appcompat.widget.AppCompatSpinner
                android:textSize="16dp"
                android:id="@+id/filiereRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/filiere_arrays"
                android:prompt="@string/filiere_prompt"
                android:drawableRight="@android:drawable/ic_input_get"
                android:textColorHint="#0000"
                android:layout_marginLeft="22dp"
                android:inputType="text"
                android:maxLength="12"
                android:textColor="@color/colorPrimary"
                android:background="#0000"
                android:padding="16dp"
                android:layout_marginRight="35dp"/>
            <View
                android:layout_width="match_parent"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:layout_height="1dp"
                android:layout_marginBottom="1dp"
                android:background="#F9F9F9"/>
            <androidx.appcompat.widget.AppCompatSpinner
                android:textSize="16dp"
                android:id="@+id/departementRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/departement_arrays"
                android:prompt="@string/departement_prompt"
                android:drawableRight="@android:drawable/ic_input_get"
                android:textColorHint="#0000"
                android:layout_marginLeft="22dp"
                android:inputType="text"
                android:maxLength="12"
                android:textColor="@android:color/white"
                android:background="#0000"
                android:padding="16dp"
                android:layout_marginRight="35dp"/>
            <View
                android:layout_width="match_parent"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:layout_height="1dp"
                android:layout_marginBottom="1dp"
                android:background="#F9F9F9"/>
            <androidx.appcompat.widget.AppCompatSpinner
                android:textSize="16dp"
                android:id="@+id/groupeRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/groupes_arrays"
                android:prompt="@string/groupes_prompt"
                android:drawableRight="@android:drawable/ic_input_get"
                android:textColorHint="#0000"
                android:layout_marginLeft="22dp"
                android:inputType="text"
                android:maxLength="12"
                android:textColor="@android:color/white"
                android:background="#0000"
                android:padding="16dp"
                android:layout_marginRight="35dp"/>
            <View
                android:layout_width="match_parent"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:layout_height="1dp"
                android:layout_marginBottom="1dp"
                android:background="#F9F9F9"/>
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/createRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/angle"
                android:text="Create"
                android:textSize="16dp"
                android:textColor="#fff"
                android:gravity="center"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:padding="16dp"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="2dp"
                android:layout_marginTop="32dp"
                />
        </LinearLayout>
    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>